Switch to a Chrome App with native ES6 modules

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,12 +1,10 @@
-BROWSERIFY := node_modules/.bin/browserify
 PRETTIER := node_modules/.bin/prettier
-LESSC := node_modules/.bin/lessc
 
 CLEAN_FILES := js
-PRETTIER_FILES := $(wildcard *.json *.js options/*.js options/*.html)
+PRETTIER_FILES := $(wildcard *.json *.js *.html options/*.js options/*.html)
 
 .PHONY: all
-all: deps prettier js/background.dist.js js/options.dist.js
+all: deps prettier
 
 .PHONY: deps
 deps:
@@ -15,14 +13,6 @@ deps:
 .PHONY: prettier
 prettier: $(PRETTIER) $(PRETTIER_FILES)
 	$(PRETTIER) --write $(PRETTIER_FILES)
-
-js/background.dist.js: $(BROWSERIFY) background.js errors.js
-	[ -d js ] || mkdir -p js
-	$(BROWSERIFY) -o js/background.dist.js -t [ babelify --presets [ @babel/preset-env ] ] background.js
-
-js/options.dist.js: $(BROWSERIFY) options/*.js
-	[ -d js ] || mkdir -p js
-	$(BROWSERIFY) -o js/options.dist.js -t [ babelify --presets [ @babel/preset-env ] ] options/options.js
 
 .PHONY: clean
 clean:
