Validate requests against a JSON schema

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,10 +1,12 @@
+AJV := node_modules/.bin/ajv
+BROWSERIFY := node_modules/.bin/browserify
 PRETTIER := node_modules/.bin/prettier
 
-CLEAN_FILES := js
+CLEAN_FILES := dist
 PRETTIER_FILES := $(wildcard *.json *.js *.html options/*.js options/*.html)
 
 .PHONY: all
-all: deps prettier
+all: deps prettier dist/request.dist.js
 
 .PHONY: deps
 deps:
@@ -13,6 +15,11 @@ deps:
 .PHONY: prettier
 prettier: $(PRETTIER) $(PRETTIER_FILES)
 	$(PRETTIER) --write $(PRETTIER_FILES)
+
+dist/request.dist.js: $(AJV) $(BROWSERIFY) request.schema.json
+	[ -d dist ] || mkdir -p dist
+	$(AJV) compile -s request.schema.json -o dist/request.js
+	$(BROWSERIFY) -o dist/request.dist.js --standalone requestValidator dist/request.js
 
 .PHONY: clean
 clean:
