--- a/src/package.json
+++ b/src/package.json
@@ -19,6 +19,11 @@
         }
     ],
     "devDependencies": {
+        "ajv-cli": "^3.0.0",
+        "browserify": "^16.2.3",
         "prettier": "^1.16.4"
+    },
+    "dependencies": {
+        "ajv": "^6.0.0"
     }
 }
