WIP: Implement PIN entry and PIN caching

--- a/src/manifest-chromium.json
+++ b/src/manifest-chromium.json
@@ -10,6 +10,8 @@
         }
     },
     "permissions": [
+        "alwaysOnTopWindows",
+        "idle",
         {
             "fileSystem": ["directory", "retainEntries"]
         }
