WIP: Implement a chrome.fileSystem backend for isomorphic-git

--- a/src/manifest-chromium.json
+++ b/src/manifest-chromium.json
@@ -13,7 +13,7 @@
         "alwaysOnTopWindows",
         "idle",
         {
-            "fileSystem": ["directory", "retainEntries"]
+            "fileSystem": ["directory", "retainEntries", "write"]
         }
     ],
     "minimum_chrome_version": "63",
