--- a/src/package.json
+++ b/src/package.json
@@ -25,6 +25,7 @@
     },
     "dependencies": {
         "ajv": "^6.0.0",
+        "isomorphic-git": "^0.55.0",
         "openpgp": "^4.4.10"
     }
 }
